fixes #248 display projects in task list table with visibility status

--- a/skins/standard/tables.css
+++ b/skins/standard/tables.css
@@ -2,6 +2,7 @@
     background-image: url('grfx/g3_table_header.png');
 }
 
+td span.hidden,
 td.hidden {
     color:#bbb;
 }
